--- a/WpfApp4/MainWindow.xaml
+++ b/WpfApp4/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Image HorizontalAlignment="Left" Height="406" Margin="32,31,0,0" VerticalAlignment="Top" Width="566" Source="/8512a7es-1920.jpg"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="619,351,0,0" VerticalAlignment="Top" Height="34" Width="122"/>
+
     </Grid>
 </Window>
